--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=apiBank
 spring.config.import=secrets.properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.main.banner-mode=console
 spring.datasource.url=jdbc:postgresql://localhost:5432/apiBank
 spring.datasource.username=postgres
