--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=apiBank
 spring.config.import=secrets.properties
-
-
+spring.datasource.url=postgresql://postgres:UgqCMYpAetWtTjieSAkGZzuidlnCUtVN@postgres.railway.internal:5432/railway
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.main.banner-mode=console
