--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,6 +1,9 @@
 spring.datasource.username=postgres
-spring.datasource.password=UgqCMYpAetWtTjieSAkGZzuidlnCUtVN
+#spring.datasource.password=UgqCMYpAetWtTjieSAkGZzuidlnCUtVN
+#spring.datasource.url=postgresql://postgres:UgqCMYpAetWtTjieSAkGZzuidlnCUtVN@postgres.railway.internal:5432/railway
+spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/api-bank
 SONG_API_KEY=febfd66cf9msh276ca2c333c55b2p17a072jsnb411682e032e
-SONG_RELEASE_API_HOST=spotify117.p.rapidapi.com
+#SONG_RELEASE_API_HOST=spotify117.p.rapidapi.com
 SONG_API_HOST=spotify81.p.rapidapi.com
-SCRAPER_API_HOST=spotify-scraper.p.rapidapi.com
+#SCRAPER_API_HOST=spotify-scraper.p.rapidapi.com
